--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <section class="header-img">
-            IMAGEN
+            IMAGE
         </section>
     </header>
     <main>
