--- a/recuperar-contraseña.html
+++ b/recuperar-contraseña.html
@@ -25,7 +25,7 @@
             </section>
             <section class="buttons">
                 <button class="btn-send" type="submit">Enviar email</button>
-                <button class="btn-cancel" type="submit">Cancelar</button>
+                <button class="btn-cancel" type="submit"><a href="login.html">Cancelar</a></button>
             </section>
         </form>
         
