--- a/recuperar-contraseña.html
+++ b/recuperar-contraseña.html
@@ -15,7 +15,7 @@
             <section class="inputs">
                 
                 <div class="datos">
-                    <label for="email">Email</label>
+                    <label for="email">E-mail</label>
                 <input type="email" id="email" required placeholder="Ingrese email">
                 </div>
                 <div class="datos">
