--- a/recuperar-contraseña.html
+++ b/recuperar-contraseña.html
@@ -11,7 +11,7 @@
         <img class="headerimg" src="https://beam-images.warnermediacdn.com/2025-03/max_iridescent-white_logo_small_rgb-width700px.png?host=wbd-dotcom-drupal-prd-us-east-1.s3.amazonaws.com">
     </header>
     <main>
-        <form class="formtext" id="form-login" action="login.html" method="get">
+        <form class="formtext">
             <section class="h1-title">
                 <h1>Restablece tu contraseña</h1>
             </section>
