--- a/recuperar-contraseña.html
+++ b/recuperar-contraseña.html
@@ -22,7 +22,7 @@
             </section>
         </form>
 
-        <form class="formlogin" id="form-login" action="login.html" method="get">
+        <form class="formlogin" id="form-login" action="main.html" method="get">
             <section class="inputs">
                 <div class="datos">
                     <h3 class="h3correo">Correo electronico</h3>
