volver al inicio

--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="login.html">login</a>
+    <a href="index.html">login</a>
     <a href="recuperar-contraseña.html">recuperar contraseña</a>
     <a href="register.html">registrarse</a>
 </body>
