--- a/register.html
+++ b/register.html
@@ -11,7 +11,7 @@
         <h1>Registrarse</h1>
     </header>
     <main>
-        <form action="login.html" method="get">
+        <form action="main.html" method="get">
             <div class="inputs">
                 <section class="datos">
                     <label for="nombre">Nombre</label>
@@ -74,7 +74,7 @@
                 </section>
                 <section class="buttons">
                     <button class="btn-send">Confirmar</button>
-                    <button class="btn-cancel">Cancelar</button>
+                    <button class="btn-cancel" action="index.html">Cancelar</button>
                 </section>
             </div>
         </form>
