arregle boton cancelar

--- a/recuperar-contraseña.html
+++ b/recuperar-contraseña.html
@@ -25,17 +25,13 @@
         <form class="formlogin" id="form-login" action="index.html" method="get">
             <section class="inputs">
                 <div class="datos">
-<<<<<<< HEAD
-                    <label for="email">E-mail</label>
-=======
                     <h3 class="h3correo">Correo electronico</h3>
->>>>>>> e47825a3373574d5fa72e28e759c222c8ab5c58b
                 <input type="email" id="email" required placeholder="Ingrese email">
                 </div>
             </section>
             <section class="buttons">
                 <button class="btn-send" type="submit">Enviar</button>
-                <button class="btn-cancel">Cancelar</button>
+                <button class="btn-cancel"><a href="index.html">Cancelar</a></button>
             </section>
         </form>
 
