--- a/main.html
+++ b/main.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="icon" type="image/png" href="https://w7.pngwing.com/pngs/242/287/png-transparent-hbo-logo-black.png">
 </head>
 <body>
     <a href="index.html">login</a>
