--- a/register.html
+++ b/register.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
     <link rel="stylesheet" href="styles/register.css">
+    <link rel="icon" type="image/png" href="https://w7.pngwing.com/pngs/242/287/png-transparent-hbo-logo-black.png">
 </head>
 
     <body>
