Mejore fondo del recuperar contraseña

--- a/recuperar-contraseña.html
+++ b/recuperar-contraseña.html
@@ -35,8 +35,9 @@
                 <button class="btn-cancel"><a href="index.html">Cancelar</a></button>
             </section>
         </form>
-
-
     </main>
+    <footer>
+        ESPACIO RESERVADO PARA EL FOOTER
+    </footer>
 </body>
 </html>
