--- a/recuperar-contraseña.html
+++ b/recuperar-contraseña.html
@@ -6,6 +6,9 @@
     <title>Recuperar Contraseña</title>
     <link rel="stylesheet" href="styles/recuperar__contra.css">
     <link rel="icon" type="image/png" href="https://w7.pngwing.com/pngs/242/287/png-transparent-hbo-logo-black.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=New+Amsterdam&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="header">
@@ -17,9 +20,9 @@
                 <h1>Restablece tu contraseña</h1>
             </section>
             <section class="h3-desc">
-                <h3>Ingresa la direccion de correo electronico que usas para Max, y te
+                <p>Ingresa la direccion de correo electronico que usas para Max, y te
                     enviaremos un enlace para reestablecer la contraseña.
-                </h3>
+                </p>
             </section>
         </form>
 
