El logo lleva al index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body class="body-login">
     <header class="header-login">
-        <img src="https://images.cdn.prd.api.discomax.com/05b7/3d4a7e2b0215.png?h=30&f=webp" alt="HBO LOGO">
+        <a href="index.html"><img src="https://images.cdn.prd.api.discomax.com/05b7/3d4a7e2b0215.png?h=30&f=webp" alt="HBO LOGO"></a>
         <a href="register.html">Registrarse Ahora</a>
     </header>
     <main class="main-login">
