--- a/recuperar-contraseña.html
+++ b/recuperar-contraseña.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header class="header">
-        <img class="headerimg" src="https://beam-images.warnermediacdn.com/2025-03/max_iridescent-white_logo_small_rgb-width700px.png?host=wbd-dotcom-drupal-prd-us-east-1.s3.amazonaws.com">
+        <a href="index.html"><img class="headerimg" src="https://images.cdn.prd.api.discomax.com/05b7/3d4a7e2b0215.png?h=30&f=webp" alt="HBO LOGO"></a>
     </header>
     <main>
         <form class="formtext">
