Link en el boton confirmar

--- a/register.html
+++ b/register.html
@@ -28,7 +28,7 @@
             <section class="planes">
                 <article class="planes__plan">
                     <h3 class="planes__plan__tipoDePlan">Plan Est&aacute;ndar</h3>
-                    <h3 class="planes__plan__precio">$7.290,00/mes</h3>
+                    <h3 class="planes__plan__precio">$7.290,00<span>/mes</span></h3>
                     <ul>
                         <li>2 dispositivos a la vez</li>
                         <li>Resoluci&oacute;n Full HD</li>
@@ -37,7 +37,7 @@
 
                 <article class="planes__plan">
                     <h3 class="planes__plan__tipoDePlan">Plan Gold</h3>
-                    <h3 class="planes__plan__precio">$8.790,00/mes</h3>
+                    <h3 class="planes__plan__precio">$8.790,00<span>/mes</span></h3>
                     <ul>
                         <li>2 dispositivos a la vez</li>
                         <li>Resoluci&oacute;n Full HD</li>
@@ -47,7 +47,7 @@
 
                 <article class="planes__plan">
                     <h3 class="planes__plan__tipoDePlan">Plan Platino</h3>
-                    <h3 class="planes__plan__precio">$10.990,00/mes</h3>
+                    <h3 class="planes__plan__precio">$10.990,00<span>/mes</span></h3>
                     <ul>
                         <li>4 dispositivos a la vez</li>
                         <li>Resoluci&oacute;n Full HD y 4K Ultra HD</li>
@@ -57,7 +57,7 @@
                 </article>
             </section>
 
-            <form method="get" class="formulario">
+            <form method="get" class="formulario" action="./index.html">
                 <section class="datosDeUsuario">
                     <label for="nombre"></label>
                     <input type="text" name="nombre" id="nombre" placeholder="Ingrese su nombre" required>
@@ -109,7 +109,7 @@
 </html>
 
 <!--        Preguntas       -->
-<!-- Linea 86 si esta bien usar el valor tel para la tarjeta asi uso el requerimiento de solo 16 digitos numericos (pattern)-->
+<!-- Esta bien usar el valor tel para la tarjeta asi uso el requerimiento de solo 16 digitos numericos (pattern)-->
 <!-- ¿Es necesario los &acute;? -->
 <!-- Como hacer para cuando elijo el método de pago de transferencia, no me pida el requerimiento de la tarjeta de crédito o débito -->
 <!-- ¿Son necesarios los label, ya que estan vacios? -->
