--- a/register.html
+++ b/register.html
@@ -98,7 +98,7 @@
 
                     <article class="confirmarOCancelar">
                         <input class="boton" type="submit" value="Confirmar">
-                        <input class="boton" type="button" value="Cancelar">
+                        <button class="boton" type="button"><a href="./index.html">Cancelar</a></button>
                     </article>
                 </section>
             </form>
