Agregue unos comentarios en el CSS register para ubicar mas rapido los colores

--- a/register.html
+++ b/register.html
@@ -117,5 +117,5 @@
 
 
 <!-- Body Linea 10 -->
-<!-- Backgrounds de formularios y planes lineas 51-83-104-117 -->
-<!-- Letras lineas 6, 87, 108, 121, 157-->
+<!-- Backgrounds de formularios y planes lineas 57-100-127-142 -->
+<!-- Letras lineas 6, 105, 132, 147, 183, 198-->
