--- a/info-series.html
+++ b/info-series.html
@@ -9,11 +9,21 @@
 
 <body>
     <header>
-
+        <nav>
+            <ul>
+                <li>Home</li>
+                <li>Series</li>
+                <li>Peliculas</li>
+                <li>Ajustes</li>
+            </ul>
+        </nav>
     </header>
-    
-    <main>
 
+    <main>
+        <section>
+            <h3>16+ | 2015-2022 | 6 Temporadas | Drama</h3>
+            <p>Seis años antes de conocer a Walter White, el cuestionable abogado Jimmy McGill asume el alias de Saul Goodman, mientras intenta labrarse un nombre propio en Albuquerque.</p>
+        </section>
     </main>
 </body>
 </html>
